compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__same_imports_multiple_times_5.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        import one.{fn1} as two\n        import two.{fn2}\n        "
---
----- SOURCE CODE
-- one.gleam

            pub fn fn1() { 1 }
            

-- two.gleam

            pub fn fn2() { 1 }
            

-- main.gleam

        import one.{fn1} as two
        import two.{fn2}
        

----- ERROR
error: Duplicate import
  ┌─ /src/one/two.gleam:3:9
  │
2 │         import one.{fn1} as two
  │         ----------------------- First imported here
3 │         import two.{fn2}
  │         ^^^^^^^^^^^^^^^^ Reimported here

`two` has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
